--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/trustee-wallet/react-native-push-notification-ios"
+    "url": "git+ssh://git@github.com/trustee-wallet/push-notification-ios.git"
   },
   "peerDependencies": {
     "@react-native-community/push-notification-ios": "^1.8.0",
